Adding support for multiple type selectors

--- a/demo.html
+++ b/demo.html
@@ -10,13 +10,14 @@
             <style type="text/css">
                 div { background: #EEE; padding: 10px; margin-bottom: 10px; border: 1px solid #000; }
                 ul { background: #333; color: #FFF; margin: 0; padding: .8em 0 .8em 2em; }
+                li.c {font-size:2em;}
             </style>
     </head>
     <body>
         
         <script src="satisfy.jquery.js"></script>
         <script>
-            jQuery('div:3 ul:2 li[innerHTML="List item"]:3').satisfy().appendTo('body');
+            jQuery('div:3 ul:2 li[innerHTML="List item"][class=c]:3').satisfy().appendTo('body');
         </script>
         
     </body>
