--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         
-        <script src="satisfy.jquery.js"></script>
+        <script src="satisfy.js"></script>
         <script>
         
             /* TESTING TABLE */
